# ghall

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  config.rs  git.rs  github.rs  local.rs  main.rs  ui.rs
